--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
                                 href="#"
-                                >Home</a
+                                >HomePage</a
                             >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
