--- a/index.html
+++ b/index.html
@@ -1567,7 +1567,7 @@
                             <button
                                 class="mt-16 bg-blue-600 px-6 py-2.5 text-center text-sm font-semibold capitalize leading-5 text-white hover:bg-blue-500 focus:outline-none lg:mx-0 lg:w-auto"
                             >
-                                ت سوق اآلن
+                                تسوق الان
                             </button>
                         </a>
                     </div>
