--- a/index.html
+++ b/index.html
@@ -1843,7 +1843,7 @@
                     <h1
                         class="text-center text-2xl lg:text-4xl font-semibold text-gray-800"
                     >
-                        شائعة أ
+                        الأسئلة الشائعة
                     </h1>
 
                     <div class="mt-12 space-y-8">
