--- a/index.html
+++ b/index.html
@@ -1815,23 +1815,23 @@
                                 class="my-6 text-center leading-relaxed text-3xl font-semibold text-gray-100"
                             >
                                 نحن شركة رائدة ومتخصصة في بيع المنتجات المائية
-                                خاصة في المجاالت المنزلية والزراعية في .المغرب،
-                                مع الحمض النووي األفريقي
+                                خاصة في المجالات المنزلية والزراعية في المغرب،
+                                مع الحمض النووي الافريقي
                             </h1>
                             <p
                                 class="text-center text-lg leading-relaxed text-gray-300 mx-8"
                             >
-                                نحن نقدم مجموعة واسعة من فئات مختلفة من المنتجات
+                                نحن نقدم مجموعة واسعة من الفئات المختلفة من المنتجات
                                 مثل منتجات المياه الذكية ومنتجات إدارة المياه
-                                ومنتجات تنقية المياه ومستلزمات المياه ... إضافةً
-                                إلدارة وحفظ إلى ذلك، نعمل على توعية الناس بواسطة
-                                تزويد المجتمع بمعلومات قيمة ونصائح .مواردهم
+                                ومنتجات تنقية المياه ومستلزمات المياه ... علاوة
+                                إلى ذلك، نعمل على توعية الناس بواسطة
+                                تزويد المجتمع بمعلومات قيمة ونصائح عن مواردهم
                                 المائية
                                 <br />
-                                هدفنا هو الحفاظ على المياه وجعلها موردًا مستدا
-                                ًما بالجودة المناسبة، بواسطة تزويد عمالئنا
+                                 هدفنا هو الحفاظ على المياه وجعلها موردًا مستداما
+                                ً بالجودة المناسبة، بواسطة تزويد عمالئنا
                                 بمجموعة واسعة من المنتجات التي .توفر المياه
-                                وتنقيها بتكلفة معقولة
+                                وتنقيتها بتكلفة معقولة
                             </p>
                         </div>
                     </div>
@@ -1852,7 +1852,7 @@
                                 class="flex w-full items-center justify-between p-8"
                             >
                                 <h1 class="font-semibold text-gray-700">
-                                    منتج؟ طلب يمكنني ك
+                                    كيف يمكنني طلب منتج؟
                                 </h1>
 
                                 <span
@@ -1898,8 +1898,7 @@
                             <hr class="hidden border-gray-200" />
 
                             <p class="hidden p-8 text-sm text-gray-500">
-                                يجب عليك ملء النموذج. سوف نتواصل مع أنت لمزيد من
-                                المعلومات ومن ثم سوف تقوم بشحن منتج
+                                يجب عليك ملء النموذج. سوف نتواصل معك لمزيد من المعلومات ومن ثم سوف نقوم بشحن المنتج لك
                             </p>
                         </div>
                     </div>
@@ -1912,20 +1911,20 @@
                         class="text-center text-xl font-semibold tracking-tight text-gray-800 md:mx-3 xl:text-3xl"
                     >
                         سجل للحصول على عروض حصرية واحصل على خصم 10 ٪على طلبك
-                        األول
+                        الأول
                     </h1>
 
                     <form class="my-12 mx-4 lg:mx-24 flex">
                         <input
                             type="email"
-                            placeholder="اكتب بريدك االلكتروني هنا"
+                            placeholder="اكتب بريدك الإلكتروني هنا"
                             class="w-full rounded-l-lg p-4 border-t mr-0 border-b border-l text-gray-800 border-gray-800 focus:border-gray-700 focus:ring-0 bg-white"
                         />
                         <a
                             href="#"
                             class="inline-flex items-center justify-center rounded-r-lg bg-gray-800 px-4 py-2 text-sm text-white duration-300 hover:bg-gray-700 focus:ring focus:ring-gray-300 focus:ring-opacity-80"
                         >
-                            اشترك اآلن
+                            اشترك الان
                         </a>
                     </form>
                 </div>
