--- a/index.html
+++ b/index.html
@@ -1829,8 +1829,8 @@
                                 المائية
                                 <br />
                                  هدفنا هو الحفاظ على المياه وجعلها موردًا مستداما
-                                ً بالجودة المناسبة، بواسطة تزويد عمالئنا
-                                بمجموعة واسعة من المنتجات التي .توفر المياه
+                                ً بالجودة المناسبة، بواسطة تزويد عملائنا
+                                بمجموعة واسعة من المنتجات التي توفر المياه
                                 وتنقيتها بتكلفة معقولة
                             </p>
                         </div>
