--- a/5LayerFaucetWaterFilter.html
+++ b/5LayerFaucetWaterFilter.html
@@ -452,7 +452,7 @@
                                     </div>
                                 </div>
                                 <div class="flex pr-2 md:pr-16">
-                                    <a href="buy">
+                                    <a href="#buy">
                                         <button
                                             type="button"
                                             class="px-5 py-2.5 mr-2 mb-2 font-medium text-sm bg-blue-600 hover:bg-blue-500 text-white"
@@ -1328,7 +1328,7 @@
                                     </div>
                                 </div>
                                 <div class="flex pr-2">
-                                    <a href="Acheter">
+                                    <a href="#Acheter">
                                         <button
                                             type="button"
                                             class="px-5 py-2.5 mr-2 mb-2 font-medium text-sm bg-blue-600 hover:bg-blue-500 text-white"
@@ -1537,6 +1537,7 @@
 
                         <div class="mt-8 lg:mx-6 lg:w-3/5">
                             <div
+                                id="Acheter"
                                 class="mx-auto w-full overflow-hidden bg-white px-8 py-10 shadow-2xl lg:max-w-2xl"
                             >
                                 <h1 class="text-2xl font-medium text-gray-700">
@@ -2204,12 +2205,14 @@
                                     </div>
                                 </div>
                                 <div class="flex pr-2 md:pr-16">
-                                    <button
-                                        type="button"
-                                        class="px-5 py-2.5 mr-2 mb-2 font-medium text-sm bg-blue-600 hover:bg-blue-500 text-white"
-                                    >
-                                        شراء االن
-                                    </button>
+                                    <a href="#شراء">
+                                        <button
+                                            type="button"
+                                            class="px-5 py-2.5 mr-2 mb-2 font-medium text-sm bg-blue-600 hover:bg-blue-500 text-white"
+                                        >
+                                            شراء االن
+                                        </button>
+                                    </a>
                                 </div>
                             </div>
                             <div>
@@ -2403,6 +2406,7 @@
 
                         <div class="mt-8 lg:mx-6 lg:w-3/5">
                             <div
+                                id="شراء"
                                 class="mx-auto w-full overflow-hidden bg-white px-8 py-10 shadow-2xl lg:max-w-2xl"
                             >
                                 <h1 class="text-2xl font-medium text-gray-700">
