--- a/index.html
+++ b/index.html
@@ -1830,7 +1830,10 @@
                                 <br />
                                  هدفنا هو الحفاظ على المياه وجعلها موردًا مستداما
                                 ً بالجودة المناسبة، بواسطة تزويد عملائنا
-                                بمجموعة واسعة من المنتجات التي توفر المياه
+                                بمجموعة واسعة من المنتجات التي 
+
+
+توفر المياه
                                 وتنقيتها بتكلفة معقولة
                             </p>
                         </div>
