--- a/360DegreeRotatingFaucetWaterFilter.html
+++ b/360DegreeRotatingFaucetWaterFilter.html
@@ -383,12 +383,12 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs 27</span
+                                            >Dhs 59,99</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
                                         >
-                                            Dhs 30
+                                            Dhs 80
                                         </span>
                                         <div class="md:pl-6">
                                             <p
@@ -1184,12 +1184,12 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs 27</span
+                                            >Dhs 59,99</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
                                         >
-                                            Dhs 30
+                                            Dhs 80
                                         </span>
                                         <div class="md:pl-6">
                                             <p
@@ -1988,12 +1988,12 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs 27</span
+                                            >Dhs 59,99</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
                                         >
-                                            Dhs 30
+                                            Dhs 80
                                         </span>
                                         <div class="md:pl-6">
                                             <p
@@ -2320,7 +2320,7 @@
                                         type="submit"
                                         class="mt-6 w-full transform rounded-md bg-blue-600 px-6 py-3 text-sm font-medium capitalize tracking-wide text-white transition-colors duration-300 hover:bg-blue-500 focus:outline-none focus:ring focus:ring-blue-400 focus:ring-opacity-50"
                                     >
-                                        اطلب االن
+                                    اطلب الان
                                     </button>
                                 </form>
                             </div>
