--- a/MiniFaucetWaterFilter.html
+++ b/MiniFaucetWaterFilter.html
@@ -384,12 +384,12 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs 27</span
+                                            >Dhs 199,99</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
                                         >
-                                            Dhs 30
+                                            Dhs 300
                                         </span>
                                         <div class="md:pl-6">
                                             <p
@@ -1107,12 +1107,12 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs 27</span
+                                            >Dhs 199,99</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
                                         >
-                                            Dhs 30
+                                            Dhs 300
                                         </span>
                                         <div class="md:pl-6">
                                             <p
@@ -1830,12 +1830,12 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs 27</span
+                                            >Dhs 199,99</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
                                         >
-                                            Dhs 30
+                                            Dhs 300
                                         </span>
                                         <div class="md:pl-6">
                                             <p
@@ -1855,7 +1855,7 @@
                                             type="button"
                                             class="px-5 py-2.5 mr-2 mb-2 font-medium text-sm bg-blue-600 hover:bg-blue-500 text-white"
                                         >
-                                            شراء االن
+                                            شراء الان
                                         </button>
                                     </a>
                                 </div>
@@ -2078,7 +2078,7 @@
                                         type="submit"
                                         class="mt-6 w-full transform rounded-md bg-blue-600 px-6 py-3 text-sm font-medium capitalize tracking-wide text-white transition-colors duration-300 hover:bg-blue-500 focus:outline-none focus:ring focus:ring-blue-400 focus:ring-opacity-50"
                                     >
-                                        اطلب االن
+                                        اطلب الان
                                     </button>
                                 </form>
                             </div>
